--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intl": "^7.1.6"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.12",
